# Rust_Trader

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  risk_config.toml  setup_server.sh
src/: main.rs
src/config/: mod.rs  risk_profile.rs
src/database/: mod.rs  schema.sql
src/modules/: mod.rs
src/modules/action/: executor.rs  mod.rs  snapshot.rs
src/modules/brain/: llm.rs  mod.rs  rag.rs
src/modules/evolution/: autopsy.rs  mod.rs  pnl_monitor.rs  scanner.rs
src/modules/perception/: fetcher.rs  math.rs  mod.rs  news.rs  reddit.rs  structs.rs  text_serializer.rs  ws_client.rs
src/utils/: http_client.rs  mod.rs  notifier.rs  test_rag_net.rs
