[package]
name = "rust_trader"
version = "6.0.0"
edition = "2021"
default-run = "rust_trader"

[dependencies]
# --- 核心依赖 ---
tokio = { version = "1.36", features = ["full"] }
# [修改] 移除了 "socks" 特性，因为不再需要代理了
reqwest = { version = "0.11", features = ["json", "rustls-tls"] } 
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
qdrant-client = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
pgvector = { version = "0.3", features = ["sqlx"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
dashmap = "5.5"